# claude-code-memory

./: .gitignore  CLAUDE.md  PRD.md  README.md  SPEC.md  pyproject.toml  test-file-1.txt  test-file-2.txt
.claude-plugin/: plugin.json
.dev-marketplace/.claude-plugin/: marketplace.json
agents/: memory-updater.md
commands/: init.md  memory-calibrate.md  memory-init.md  memory-status.md  memory-sync.md  sync.md
commands/auto-memory/: init.md  status.md
hooks/: hooks.json
scripts/: post-tool-use.py  stop.py
skills/codebase-analyzer/: SKILL.md
skills/codebase-analyzer/templates/: CLAUDE.root.md.template  CLAUDE.subtree.md.template
skills/memory-processor/: SKILL.md
skills/shared/references/: guidelines.md
tests/: __init__.py  test_hooks.py  test_integration.py  test_skills.py
