[project]
name = "claude-code-auto-memory"
version = "0.4.0"
description = "Automatically maintains CLAUDE.md files as codebases evolve"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "severity1" }
]
keywords = ["claude", "claude-code", "plugin", "memory"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyyaml>=6.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
